2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* com/fluendo/player/Cortado.java:
	  fix compiler warning

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  allow excluding functionality with -Dexclude=(which,...)

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Wim Taymans

	* com/fluendo/player/Cortado.java:
	* com/fluendo/player/Status.java:
	  Replace getWidth and getHeight with getSize (1.1)