@@ -2,8 +2,11 @@ package sun.audio;
 
 import java.io.*;
 
-public class AudioStream
+public class AudioStream extends java.io.FilterInputStream
 {
-  public AudioStream(InputStream is) {
+  public AudioStream(InputStream is) throws IOException {
+    super(is);
   }
+
+  
 }
